# Square

./: .gitignore  ChangeLog.md  README.md  Square.cabal  TAGS  package.yaml  stack.yaml
bench/: bench.hs
src/Data/: Square.hs
src/Data/Coerce/: Utils.hs
src/Data/Sequence/: RightPerfect.hs
src/Data/Square/: Binary.hs  BinarySize.hs
src/Data/Square/Internal/: Binary.hs
src/Numeric/: Binary.hs  Peano.hs
test/: square-tests.hs
