name:                Square
version:             0.2.0.0
synopsis:            Okasaki's Square matrices with nested types
description:         Please see README.md
homepage:            https://github.com/oisdk/Square#readme
license:             MIT
license-file:        LICENSE
author:              Donnacha Oisin Kidney
category:            Data
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Square
  default-language:    Haskell2010
  build-depends:       base >= 4.9 && < 5
                     , semiring-num >= 1.2
                     , deepseq >= 1.4
  ghc-options:         -Wall

Test-Suite square-tests
  Type:                exitcode-stdio-1.0
  main-is:             test/square-tests.hs
  build-depends:       base
                     , doctest
                     , QuickCheck >= 2.8
                     , Square
                     , semiring-num >= 0.6
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             bench.hs
  build-depends:       base
                     , Square
                     , criterion >=1.1
                     , random >= 1.1
                     , containers >= 0.5
                     , semiring-num >= 0.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010